= v0.5.9 - EDGE
* Fix: GridPanel's "local filters" are back (they were out since the release of Ext 3.0)

= v0.5.8 - 2010-03-12
* Fix: GertThiel's method_missing-related fix enabling better compatibility with other Ruby libs
* Fix: acts_as_list runtime dependency

= v0.5.7 - 2010-02-26
* Regression: column config for GridPanel again accepts a renderer along with its parameters (as array, where the first element is the renderers name, the second - the parameters passed to the renderer, e.g.: :renderer => ["date", "y-m-d"])
* Fix: Window resize/move now works correctly
* Code: taking care of deprecated methods

= v0.5.6 - 2010-01-10
* Compatibility with latest netzke-core
* Compatibility with Ext JS v3.1
* Impr: Code reorganization
* Impr: Non-standard primary key support in GridPanel and FormPanel
* Impr: Search button in GridPanel indicates that records filtering is active
* Fix: by default, SearchPanel excludes boolean fields for now (until a 3-state checkbox is introduced)
* Impr: made it possible to create new AR records with assigned associations using double-underscore notation, e.g.: Clerk.new(:boss__last_name => "Aguraijuja ")
* Impr: specifying an item for Netzke::Window is now optional
* Fix: xtype field in FieldsConfigurator is now a combobox
* Fix: FieldsConfigurator was crashing when fired consequently for grid and form
* Depr: :data_class_name option is deprecated, use :model
* Impr: "gear" tool is now hidden on FieldsConfigurator
* Impr: Grid/FormPanel layouts are now not stored into the netzke_preferences table unless the defaults are modified (cleaner table)

= v0.5.5.1 - 2009-11-09
* Compatibility with latest netzke-core

= v0.5.5 - 2009-11-09
* Compatibility with latest netzke-core
* Regression: pressing "enter" was not submitting the form (FormPanel)
* Regression: "Restore defaults" button was not working in FieldsConfigurator and PropertyEditor